2016-10-22  Mark Wielaard  <mjw@redhat.com>

	* dwarf.h: Correct spelling of DW_LANG_PLI. Add compatibility define.
	* dwarf_aggregate_size.c (array_size): Use correct spelling of
	DW_LANG_PLI.

2016-10-11  Akihiko Odaki  <akihiko.odaki.4i@stu.hosei.ac.jp>

	* dwarf_getpubnames.c: Remove sys/param.h include, add system.h.
	* libdw_alloc.c: Likewise.

2016-07-08  Mark Wielaard  <mjw@redhat.com>

	* libdw.map (ELFUTILS_0.167): New. Add dwelf_strtab_init,
	dwelf_strtab_add, dwelf_strtab_add_len, dwelf_strtab_finalize,
	dwelf_strent_off, dwelf_strent_str and dwelf_strtab_free.

2016-02-13  Mark Wielaard  <mjw@redhat.com>

	* dwarf_getsrclines.c (read_srclines): Calculate ndirs first, then
	assign to ndirlist.

2015-12-18  Mark Wielaard  <mjw@redhat.com>

	* libdwP.h (struct Dwarf): Remove sectiondata_gzip_mask.
	(__libdw_free_zdata): Remove.
	* dwarf_begin_elf.c (inflate_section): Remove.
	(check_section): Remove __libdw_free_zdata calls. Use elf_compress
	and elf_compress_gnu to decompress if necessary.
	(valid_p): Remove __libdw_free_zdata calls.
	(scngrp_read): Use elf_compress if section is compressed. Remove
	__libdw_free_zdata calls.
	* dwarf_end.c (__libdw_free_zdata): Remove.
	(dwarf_end): Don't call __libdw_free_zdata.

2015-10-28  Mark Wielaard  <mjw@redhat.com>

	* libdw.map (ELFUTILS_0.165): New. Add dwelf_scn_gnu_compressed_size.

2015-12-02  Mark Wielaard  <mjw@redhat.com>

	* fde.c (intern_fde): Don't leak duplicate FDEs.

2015-12-01  Mark Wielaard  <mjw@redhat.com>

	* fde.c (intern_fde): Don't intern an fde that doesn't cover a
	valid code range.

2015-12-01  Mark Wielaard  <mjw@redhat.com>

	* dwarf_end.c (dwarf_end): Call cu_free on fake_loc_cu if it exists.

2015-10-14  Chih-Hung Hsieh  <chh@google.com>

	* dwarf_entry_breakpoints.c (dwarf_entry_breakpoints): Move recursive
	functions 'add_bkpt', 'entrypc_bkpt', and 'search_range' to file scope.

2015-10-14  Chih-Hung Hsieh  <chh@google.com>
